# python-tldap

./: .bumpversion.cfg  .gitignore  .gitreview  .mergify.yml  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGES.rst  COPYING.txt  MANIFEST.in  Pipfile  README  README.rst  README.txt  __init__.py  backend.py  exceptions.py  flake.nix  manage.py  pylint.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  tests.py  tox.ini  utils.py
.circleci/: config.yml
.github/workflows/: codeql.yml  pythonapp.yml
debian/: changelog  clean  control  copyright  gbp.conf  pydist-overrides  python-tldap-doc.doc-base  rules  watch
debian/source/: lintian-overrides  options
debian/upstream/: signing-key.asc
docs/: __init__.py  conf.orig.py  conf.py  future.rst  getting_started.rst  history.rst  index.rst  ldap.inv  modules.rst  reference.rst  settings.py  tldap.backend.fake_transactions.rst  tldap.backend.no_transactions.rst  tldap.backend.rst  tldap.base.rst  tldap.database.rst  tldap.django.migrations.rst  tldap.django.rst  tldap.exceptions.rst  tldap.fields.rst  tldap.helpers.rst  tldap.manager.rst  tldap.methods.ad.rst  tldap.methods.common.rst  tldap.methods.ds389.rst  tldap.methods.ldap_passwd.rst  tldap.methods.models.rst  tldap.methods.pwdpolicy.rst  tldap.methods.rst  tldap.methods.samba.rst  tldap.methods.shibboleth.rst  tldap.middleware.rst  tldap.modlist.rst  tldap.options.rst  tldap.query.rst  tldap.query_utils.rst  tldap.rst  tldap.test.rst  tldap.test.slapd.rst  tldap.transaction.rst  (+1 more)
features/: accounts.feature  environment.py  groups.feature  persons.feature  sessions.feature
features/steps/: accounts.py  groups.py  ldap.py  persons.py  utils.py
test/: settings.py  tests.py
tests/: database.py  schemas.py  settings.py  tests.py
tests/a_unit/: conftest.py  test_backend_fake_transactions.py  test_database.py  test_dn.py  test_models.py  test_modlist.py  test_query.py
tests/b_integration/: conftest.py  test_accounts.py  test_groups.py
tests/b_integration/django/: conftest.py  test_accounts.py
tests/django/: conftest.py  database.py  settings.py  test_accounts.py  test_groups.py
tldap/: __init__.py  backend.py  base.py  compat.py  dict.py  django.py  dn.py  exceptions.py  fields.py  filter.py  helpers.py  ldap_passwd.py  manager.py  middleware.py  models.py  modlist.py  options.py  query.py  query_utils.py  transaction.py  utils.py
tldap/backend/: __init__.py  base.py  fake_transactions.py  no_transactions.py  python.py  transaction.py
tldap/database/: __init__.py  helpers.py
tldap/django/: __init__.py  apps.py  helpers.py  middleware.py  models.py
tldap/methods/: __init__.py  ad.py  common.py  ds389.py  ldap_passwd.py  models.py  pwdpolicy.py  samba.py  shibboleth.py
tldap/methods/migrations/: 0001_initial.py  0002_auto__add_field_counters_scheme.py
tldap/schemas/: 389.py  __init__.py  ad.py  ds389.py  eduroam.py  helpers.py  other.py  rfc.py  samba.py
tldap/test/: __init__.py  data.py  models.py  schemas.py  settings.py  slapd.py  tests.py
tldap/tests/: __init__.py  base.py  conftest.py  database.py  schemas.py  settings.py  test_backend_fake_transactions.py  test_dn.py  test_ldap_passwd.py  test_models.py  test_modlist.py  tests.py
tldap/tests/a_unit/: conftest.py  test_dict.py  test_dn.py  (+2 more)
(+14 files in other folders)
