[tool.poetry]
name = "python-tldap"
version = "1.0.5"
description = "High level python LDAP Library"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
license = "GPL3+"
packages = [
    { include = "tldap" },
]

[tool.poetry.dependencies]
python = "^3.8"
passlib = "*"
pyasn1 = "*"
ldap3 = "*"
six = "*"
pip = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"
pytest-runner = "*"
pytest-bdd = "*"
pytest-django = "*"
django = "*"
sphinx = "*"
tox = "*"
flake8 = "*"
twine = "*"
pipenv-to-requirements = "*"
pytest-cov = "*"
isort = "*"
wheel = "*"
bumpversion = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
