[tool.poetry]
name = "python-tldap"
version = "1.0.6"
description = "High level python LDAP Library"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
license = "GPL3+"
packages = [
    { include = "tldap" },
]
readme = "README.rst"
homepage = "https://github.com/Karaage-Cluster/python-tldap/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
passlib = "*"
pyasn1 = "*"
ldap3 = "*"
six = "*"
pip = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"
pytest-runner = "*"
pytest-bdd = "*"
pytest-django = "*"
django = "*"
sphinx = "*"
tox = "*"
flake8 = "*"
twine = "*"
pipenv-to-requirements = "*"
pytest-cov = "*"
isort = "*"
wheel = "*"
bumpversion = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
