[tool.poetry]
name = "python-tldap"
version = "1.0.8"
description = "High level python LDAP Library"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
license = "GPL3+"
packages = [
    { include = "tldap" },
]
readme = "README.rst"
homepage = "https://github.com/Karaage-Cluster/python-tldap/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
passlib = "*"
pyasn1 = "*"
ldap3 = "*"
six = "*"
django = {version = "*", optional = true}
sphinx = {version = "*", optional = true}
furo = {version = "*", optional = true}
cryptography = "44.0.3"

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"
pytest-runner = "*"
pytest-bdd = "*"
pytest-django = "*"
django = "*"
tox = "*"
flake8 = "*"
twine = "*"
pipenv-to-requirements = "*"
pytest-cov = "*"
isort = "*"
wheel = "*"
bump2version = "*"

[tool.poetry.extras]
docs = ["sphinx", "django", "furo"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
